--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ember-cli": "2.4.2",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
+    "ember-cli-cors": "0.0.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-font-awesome": "1.5.0",
     "ember-cli-htmlbars": "^1.0.1",
