--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
     "emberfire": "1.6.6",
+    "emberx-select": "2.1.1",
     "loader.js": "^4.0.0",
     "torii": "0.6.1"
   }
